feat: added update + delete for topics
